# charlie-s-project

./: .render.yaml  20240715_paper_sender.py  Procfile  pyproject.toml  requirements.txt
OneDrive/桌面/Data science/Project/Line bot/: 20240715_paper_sender.py  Procfile.txt  You did well today_24.06.26.lbd  app.py  pyproject.toml  requirements.txt  test_search.py
OneDrive/桌面/Data science/Project/Line bot/.github/workflows/: deploy.yml.txt
