[tool.poetry]
name = "charlie-s-project"
version = "0.1.0"
description = "A Line bot for scientific articles"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
line-bot-sdk = "^2.0.0"
schedule = "^1.1.0"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


